<resources>
    <string name="app_name">My Application_MP</string>
    <string name="full_name">FullName</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="user_registration">User registration</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number">Enter Your Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country">Country</string>
    <string name="hobbies">Hobbies</string>
    <string name="playing">Playing</string>
    <string name="reading">Reading</string>
    <string name="travelling">Travelling</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>