<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationForm">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:text="@string/user_registration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:id="@+id/tvFullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/etFullname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFullName"
        android:hint="@string/enter_full_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="MobileNumber"
        android:id="@+id/tvMobileNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullname"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/etMobileNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMobileNumber"
        android:hint="@string/enter_mobile_number"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:id="@+id/tvGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMobileNumber"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rgGender"
        app:layout_constraintTop_toBottomOf="@id/tvGender"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/rbMale"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/rbFemale"/>


    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvCountry"
        android:text="Country"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/rgGender"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spCountry"
        android:text="@string/country"
        app:layout_constraintTop_toBottomOf="@id/tvCountry"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvHobbies"
        android:text="@string/hobbies"
        app:layout_constraintTop_toBottomOf="@id/spCountry"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvHobbies"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/playing"
        android:layout_marginStart="10dp"
        android:id="@+id/cbPlaying"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvHobbies"
        app:layout_constraintStart_toEndOf="@id/cbPlaying"
        android:text="@string/travelling"
        android:layout_marginStart="10dp"
        android:id="@+id/cbTravelling"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvHobbies"
        app:layout_constraintStart_toEndOf="@id/cbTravelling"
        android:text="@string/reading"
        android:layout_marginStart="10dp"
        android:id="@+id/cbReading"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubmit"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/cbPlaying"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>







</androidx.constraintlayout.widget.ConstraintLayout>